[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/UI/Livro/livro_conteudo_cnv.png" type="Texture" id=1]
[ext_resource path="res://src/HUD/Livro.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/Som.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/voltar_icone.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/Livro/livro_conteudo_eficaz_conflitos.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/Livro/livro_conteudo_escrita_email.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="CNV" type="Sprite" parent="."]
position = Vector2( 1250.26, 591.5 )
scale = Vector2( 0.98913, 0.98913 )
texture = ExtResource( 1 )

[node name="CEL" type="Sprite" parent="."]
visible = false
position = Vector2( 1250, 591.5 )
scale = Vector2( 0.988924, 0.98913 )
texture = ExtResource( 6 )

[node name="CERC" type="Sprite" parent="."]
visible = false
position = Vector2( 1250, 591.5 )
scale = Vector2( 0.988924, 0.989131 )
texture = ExtResource( 5 )

[node name="HSlider" type="HSlider" parent="."]
visible = false
margin_left = 2235.0
margin_top = 120.0
margin_right = 2440.0
margin_bottom = 136.0
size_flags_horizontal = 15
size_flags_stretch_ratio = 0.0
min_value = -50.0
max_value = -4.0
value = -4.0

[node name="Som" type="TextureButton" parent="."]
margin_left = 2297.0
margin_top = 16.0
margin_right = 2379.0
margin_bottom = 98.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
expand = true

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 2167.0
margin_top = 5.0
margin_right = 2302.0
margin_bottom = 133.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
expand = true

[node name="Button" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 438.0
margin_top = 274.0
margin_right = 528.0
margin_bottom = 398.0

[node name="Button2" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1946.0
margin_top = 217.0
margin_right = 2019.0
margin_bottom = 337.0

[connection signal="pressed" from="Som" to="." method="_on_Som_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
